@@ -2247,7 +2247,14 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         }
 
         private ActorRef buildSubVoiceInterpreter(Tag child) throws MalformedURLException, URISyntaxException {
-            URI url = new URL(child.attribute("url").value()).toURI();
+//            URI url = new URL(child.attribute("url").value()).toURI();
+            URI url = null;
+            if (request != null) {
+                final URI base = request.getUri();
+                url = UriUtils.resolve(base, new URI(child.attribute("url").value()));
+            } else {
+                url = UriUtils.resolve(new URI(child.attribute("url").value()));
+            }
             String method;
             if (child.hasAttribute("method")) {
                 method = child.attribute("method").value().toUpperCase();
@@ -2279,7 +2286,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 StartInterpreter start = new StartInterpreter(outboundCall);
                 Timeout expires = new Timeout(Duration.create(6000, TimeUnit.SECONDS));
                 Future<Object> future = (Future<Object>) ask(interpreter, start, expires);
-                Object object = Await.result(future, Duration.create(6000, TimeUnit.SECONDS));
+                Object object = Await.result(future, Duration.create(6000 * 10, TimeUnit.SECONDS));
 
                 if (!End.class.equals(object.getClass())) {
                     fsm.transition(message, hangingUp);
